--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,4 @@ command_warnings = False
 retry_files_enabled = False
 hash_behaviour = merge
 roles_path = ~/cloudbox/roles
+vault_password_file = ~/.ansible_vault
