--- a/cloudbox_mod.yml
+++ b/cloudbox_mod.yml
@@ -8,4 +8,5 @@
   roles:
     - { role: pre_tasks }
     - { role: tvheadend, tags: ['tvheadend'] }
+    - { role: filebot, tags: ['filebot'] }
     - { role: unifi_controller, tags: ['unifi_controller'] }
