--- a/cloudbox_mod.yml
+++ b/cloudbox_mod.yml
@@ -10,3 +10,4 @@
     - { role: tvheadend, tags: ['tvheadend'] }
     - { role: filebot, tags: ['filebot'] }
     - { role: unifi_controller, tags: ['unifi_controller'] }
+    - { role: flexget, tags: ['flexget'] }
