--- a/cloudbox_mod.yml
+++ b/cloudbox_mod.yml
@@ -11,4 +11,5 @@
     - { role: filebot, tags: ['filebot'] }
     - { role: unifi_controller, tags: ['unifi_controller'] }
     - { role: flexget, tags: ['flexget'] }
-    - { role: duo-unix, tags: ['duo-unix'] }
+    - { role: pam_duo, tags: ['pam_duo'] }
+    - { role: login_duo, tags: ['login_duo'] }
