--- a/cloudbox_mod.yml
+++ b/cloudbox_mod.yml
@@ -2,7 +2,7 @@
 - hosts: localhost
   vars_files:
     - settings.yml
-    - ['~/cloudbox/accounts.yml', '~/cloudbox/defaults/accounts.yml.default']
+    - accounts.yml
     - ['~/cloudbox/settings.yml', '~/cloudbox/defaults/settings.yml.default']
     - ['~/cloudbox/adv_settings.yml', '~/cloudbox/defaults/adv_settings.yml.default']
   roles:
