--- a/roles/login_duo/tasks/main.yml
+++ b/roles/login_duo/tasks/main.yml
@@ -2,13 +2,13 @@
   apt_key:
     url: https://duo.com/APT-GPG-KEY-DUO
     state: present
- 
+
 - name: Add Ubuntu Duo Repositories
   apt_repository:
     repo: "{{ item }}"
     state: present
   with_items:
-    - 'deb http://pkg.duosecurity.com/Ubuntu {{ ansible_distribution_release }} main'
+    - 'deb [arch=amd64] http://pkg.duosecurity.com/Ubuntu {{ ansible_distribution_release }} main'
   when: ansible_distribution == 'Ubuntu'
 
 - name: install duo-unix
@@ -28,21 +28,21 @@
     regexp: '^ikey \s?='
     line: "ikey = {{ duo.ikey }}"
     state: present
-    
+
 - name: pam_duo.conf | Set Secret Key
   lineinfile:
     path: "/etc/duo/login_duo.conf"
     regexp: '^skey \s?='
     line: "skey = {{ duo.skey }}"
     state: present
-    
+
 - name: pam_duo.conf | Set API Hostname
   lineinfile:
     path: "/etc/duo/login_duo.conf"
     regexp: '^host \s?='
     line: "host = {{ duo.host }}"
     state: present
-    
+
 - name: pam_duo.conf | Add autopush
   blockinfile:
       path: "/etc/duo/login_duo.conf"
@@ -50,12 +50,12 @@
         ; enables autopush verification
         autopush = yes
       state: present
-    
+
 - name: Backup sshd_config
   copy:
     src: /etc/ssh/sshd_config
     dest: /etc/ssh/sshd_config.backup
-    
+
 - name: sshd_config | Set ForceCommand
   lineinfile:
       path: "/etc/ssh/sshd_config"
@@ -63,20 +63,20 @@
       line: "ForceCommand /usr/sbin/login_duo"
       state: present
 
-- name: sshd_config | Set PermitTunnel 
+- name: sshd_config | Set PermitTunnel
   lineinfile:
       path: "/etc/ssh/sshd_config"
       regexp: 'PermitTunnel (yes|no)'
       line: "PermitTunnel no"
       state: present
-      
-- name: sshd_config | Set AllowTcpForwarding  
+
+- name: sshd_config | Set AllowTcpForwarding
   lineinfile:
       path: "/etc/ssh/sshd_config"
       regexp: 'AllowTcpForwarding (yes|no)'
       line: "AllowTcpForwarding  no"
       state: present
-        
+
 - name: restart ssh service
   systemd:
     state: restarted
