--- a/roles/tvheadend/tasks/main.yml
+++ b/roles/tvheadend/tasks/main.yml
@@ -32,7 +32,7 @@
       - "/etc/localtime:/etc/localtime:ro"
       - "/opt/tvheadend:/config"
       - "/mnt:/mnt"
-      - "/mnt/unionfs/Media/:/recordings"
+      - "/mnt/unionfs/Media/Recordings:/recordings"
     devices:
       - "{{ '/dev/dri:/dev/dri' if dev_dri.stat.exists == True | default(false) else omit }}"
     labels:
