--- a/cloudbox_mod.yml
+++ b/cloudbox_mod.yml
@@ -14,3 +14,4 @@
     - { role: flexget, tags: ['flexget'] }
     - { role: pam_duo, tags: ['pam_duo'] }
     - { role: login_duo, tags: ['login_duo'] }
+    - { role: webgrabplus, tags: ['webgrabplus'] }
